--- a/ansible_deployment/roles/k8s-deploy/templates/backend-service.yaml.j2
+++ b/ansible_deployment/roles/k8s-deploy/templates/backend-service.yaml.j2
@@ -1,11 +1,11 @@
+# backend-service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: backend-service
 spec:
   selector:
     app: backend
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
+    - port: 5000
+      targetPort: 5000
