--- a/ansible_deployment/roles/k8s-deploy/templates/frontend-deployment.yaml.j2
+++ b/ansible_deployment/roles/k8s-deploy/templates/frontend-deployment.yaml.j2
@@ -13,7 +13,7 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: frontend
-        image: nginx
-        ports:
-        - containerPort: 80
+        - name: frontend
+          image: chiragatcalfus/my-frontend:latest  # ✅ Replace with your actual image
+          ports:
+            - containerPort: 80
