--- a/ansible_deployment/roles/k8s-deploy/templates/frontend-service.yaml.j2
+++ b/ansible_deployment/roles/k8s-deploy/templates/frontend-service.yaml.j2
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-service
 spec:
+  type: NodePort
   selector:
     app: frontend
-  type: ClusterIP
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-
+    - port: 80
+      targetPort: 80
+      nodePort: 30080  
